# nw-stereo-matching

./: CMakeLists.txt  README.md
docs/: algorithm.md  algorithm_notes.md
include/: stereo_config.h  stereo_matching.h
src/: main.cpp
src/cpu/: nw_stereo_matching.cpp  stereo_matching.cpp
src/cuda/: stereo_matching_cuda.cu  stereo_matching_kernel.cu  stereo_matching_kernel.h
src/lib/: stereo_matching_lib.cpp
tests/: CMakeLists.txt
tests/unit/: test_stereo_matching.cpp
